[gd_scene load_steps=19 format=2]

[ext_resource path="res://Imagenes/G1/b1.jpg" type="Texture" id=1]
[ext_resource path="res://Escenas/GAME1PLAYER.gd" type="Script" id=2]
[ext_resource path="res://Kruger/Kruger_2.png" type="Texture" id=3]
[ext_resource path="res://Kruger/Kruger_0.png" type="Texture" id=4]
[ext_resource path="res://Kruger/Kruger_3.png" type="Texture" id=5]
[ext_resource path="res://Kruger/Kruger_1.png" type="Texture" id=6]
[ext_resource path="res://Imagenes/G1/bad_1.png" type="Texture" id=7]
[ext_resource path="res://Imagenes/G1/bad_2.png" type="Texture" id=8]
[ext_resource path="res://Imagenes/G1/bad_0.png" type="Texture" id=9]
[ext_resource path="res://Escenas/spawng1.gd" type="Script" id=10]
[ext_resource path="res://Escenas/ENEMIGO1.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.5293, 670.664 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 58.0
height = 0.0

[sub_resource type="Animation" id=4]
resource_name = "mover"
length = 2.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1, 1.26905 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 508.329, -23.5564 ), Vector2( 99.6537, -31.9654 ), Vector2( 888.415, -35.3289 ), Vector2( 460.322, -25.8498 ), Vector2( 288.241, -28.5963 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 431.613, 10 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 22.3102
height = 0.0

[node name="GAME1" type="Node2D"]

[node name="b1" type="Sprite" parent="."]
position = Vector2( 511.889, 298.988 )
scale = Vector2( 1.69045, 1.45085 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
rotation = 0.000604134
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1026.84, 25.1984 )
rotation = -0.00783838
shape = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 443.3, 454.83 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( 70.7107, 67.1752 )
scale = Vector2( 5.41942, 5.19845 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 68.5, 58.5 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 635.666, -34.2511 )
script = ExtResource( 10 )
npc = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Position2D"]
wait_time = 1.4
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Position2D"]
autoplay = "mover"
anims/mover = SubResource( 4 )

[node name="HACKS" type="Area2D" parent="."]
position = Vector2( 459.979, 5.33936 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HACKS"]
position = Vector2( 43.7267, 630.672 )
shape = SubResource( 5 )

[node name="ENEMIGO1" type="RigidBody2D" parent="."]
position = Vector2( 459.979, 5.33936 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ENEMIGO1"]
position = Vector2( 43.3823, 66.0746 )
scale = Vector2( 3.71139, 5.12966 )
frames = SubResource( 6 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ENEMIGO1"]
position = Vector2( 49.3891, 58.733 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="ENEMIGO1"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ENEMIGO1/Area2D"]
position = Vector2( 48.3891, 111.733 )
shape = SubResource( 7 )
[connection signal="timeout" from="Position2D/Timer" to="Position2D" method="_on_Timer_timeout"]
[connection signal="body_entered" from="HACKS" to="KinematicBody2D" method="_on_HACKS_body_entered"]
[connection signal="body_entered" from="ENEMIGO1" to="KinematicBody2D" method="_on_ENEMIGO1_body_entered"]
[connection signal="body_entered" from="ENEMIGO1/Area2D" to="KinematicBody2D" method="_on_Area2D_body_entered"]
